[project]
name = "tusk-editor"
version = "0.1.1"
description = "A modern terminal-based Markdown editor"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=0.86.1",
    "vim-engine @ file:///home/vedant/code/vim-engine/dist/vim_engine-0.1.0-py3-none-any.whl",
]
authors = [
    { name = "vedant-asati03", email = "vedant.asati03@gmail.com" }
]
license = { text = "MIT" }

[project.scripts]
tusk = "tusk.cli:main"

[dependency-groups]
dev = [
    "black>=24.1.1",
    "pytest>=8.0.0",
    "pylint>=3.0.3",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tusk"]

[tool.hatch.metadata]
allow-direct-references = true
